--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -5,10 +5,7 @@
     "colab": {
       "name": "advent_of_code_2019.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "EZK1Xo4OCFmN"
-      ],
-      "toc_visible": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2718,7 +2715,7 @@
         "check_eq(process2(s2), 4686774924)\n",
         "\n",
         "# ~72 ms with numba; ~8 s without numba.\n",
-        "puzzle.verify(2, process2, slow='numba' not in globals())"
+        "puzzle.verify(2, process2)"
       ],
       "execution_count": 51,
       "outputs": [
