--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -7225,6 +7225,11 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "provenance": [],
+   "toc_visible": true
+  },
   "jupytext": {
    "cell_metadata_filter": "-all",
    "formats": "auto:percent,ipynb",
