--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -4376,16 +4376,11 @@
     "      yx = start\n",
     "      dyx = (-1, 0)  # initial direction is up ('^')\n",
     "\n",
-    "      def is_scaffold(yx):\n",
-    "        return grid[yx] == 1\n",
-    "      def inbounds(yx):\n",
-    "        return all(0 <= yx[i] < grid.shape[i] for i in range(2))\n",
-    "      def inbound_scaffold(yx):\n",
-    "        return inbounds(yx) and is_scaffold(yx)\n",
-    "      def turn_left(dyx):\n",
-    "        return -dyx[1], dyx[0]\n",
-    "      def turn_right(dyx):\n",
-    "        return dyx[1], -dyx[0]\n",
+    "      def is_scaffold(yx): return grid[yx] == 1\n",
+    "      def inbounds(yx): return all(0 <= yx[i] < grid.shape[i] for i in range(2))\n",
+    "      def inbound_scaffold(yx): return inbounds(yx) and is_scaffold(yx)\n",
+    "      def turn_left(dyx): return -dyx[1], dyx[0]\n",
+    "      def turn_right(dyx): return dyx[1], -dyx[0]\n",
     "\n",
     "      assert not is_scaffold(tuple(np.array(yx) + dyx))\n",
     "      commands = []\n",
@@ -7223,7 +7218,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "formats": "auto:percent,ipynb",
+   "formats": "py:percent,ipynb",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
