--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -202,8 +202,9 @@
     "PROFILE = 'google.Hugues_Hoppe.965276'\n",
     "# PROFILE = 'github.hhoppe.1452460'\n",
     "TAR_URL = f'https://github.com/hhoppe/advent_of_code_{YEAR}/raw/main/data/{PROFILE}.tar.gz'\n",
-    "hh.run(f\"if [ ! -d data/{PROFILE} ]; then (mkdir -p data && cd data &&\"\n",
-    "       f\" wget -q {TAR_URL} && tar xzf {PROFILE}.tar.gz); fi\")\n",
+    "if 1:\n",
+    "  hh.run(f\"if [ ! -d data/{PROFILE} ]; then (mkdir -p data && cd data &&\"\n",
+    "         f\" wget -q {TAR_URL} && tar xzf {PROFILE}.tar.gz); fi\")\n",
     "INPUT_URL = f'data/{PROFILE}/{{year}}_{{day:02d}}_input.txt'\n",
     "ANSWER_URL = f'data/{PROFILE}/{{year}}_{{day:02d}}{{part_letter}}_answer.txt'"
    ]
@@ -683,6 +684,7 @@
    "id": "8dd423b2",
    "metadata": {},
    "source": [
+    "<a name=\"day1\"></a>\n",
     "## Day 1: Fuel mass"
    ]
   },
@@ -784,7 +786,7 @@
     }
    ],
    "source": [
-    "def day1(s, part2=False):\n",
+    "def day1(s, *, part2=False):\n",
     "\n",
     "  def get_fuel(mass):\n",
     "    return max(mass // 3 - 2, 0)\n",
@@ -819,6 +821,7 @@
    "id": "92bf6643",
    "metadata": {},
    "source": [
+    "<a name=\"day2\"></a>\n",
     "## Day 2: Machine with add/subtract"
    ]
   },
@@ -909,7 +912,7 @@
     }
    ],
    "source": [
-    "def day2a(s, part2=False):  # Original implementation before Machine.\n",
+    "def day2a(s, *, part2=False):  # Original implementation before Machine.\n",
     "\n",
     "  def day2_machine_op(s, a=12, b=2):\n",
     "    l = list(map(int, s.split(',')))\n",
@@ -970,7 +973,7 @@
     }
    ],
    "source": [
-    "def day2(s, part2=False):  # Now using Machine class.\n",
+    "def day2(s, *, part2=False):  # Now using Machine class.\n",
     "\n",
     "  def day2_machine_op(s, a=12, b=2):\n",
     "    machine = Machine.make(s)\n",
@@ -999,6 +1002,7 @@
    "id": "3118a122",
    "metadata": {},
    "source": [
+    "<a name=\"day3\"></a>\n",
     "## Day 3: Intersections of two paths"
    ]
   },
@@ -1194,7 +1198,7 @@
     }
    ],
    "source": [
-    "def day3b(s, part2=False):  # Using a sparse map on 2D positions.\n",
+    "def day3b(s, *, part2=False):  # Using a sparse map on 2D positions.\n",
     "\n",
     "  def rasterize(path: str):\n",
     "    dyx_from_move = dict(L=(0, -1), R=(0, +1), U=(-1, 0), D=(+1, 0))\n",
@@ -1254,7 +1258,7 @@
    },
    "outputs": [],
    "source": [
-    "def day3(s, part2=False):  # Using numba to operate on dict is slow.\n",
+    "def day3(s, *, part2=False):  # Using numba to operate on dict is slow.\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def rasterize(path):\n",
@@ -1299,6 +1303,7 @@
    "id": "720de1ef",
    "metadata": {},
    "source": [
+    "<a name=\"day4\"></a>\n",
     "## Day 4: Valid 6-digit passwords"
    ]
   },
@@ -1430,7 +1435,7 @@
     }
    ],
    "source": [
-    "def day4(s, part2=False):  # Recursive search with pruning.\n",
+    "def day4(s, *, part2=False):  # Recursive search with pruning.\n",
     "  lower, upper = (tuple(map(int, list(b))) for b in s.strip().split('-'))\n",
     "\n",
     "  def two_adjacent_are_same(t):\n",
@@ -1467,6 +1472,7 @@
    "id": "636052a6",
    "metadata": {},
    "source": [
+    "<a name=\"day5\"></a>\n",
     "## Day 5: Machine with branching"
    ]
   },
@@ -1596,7 +1602,7 @@
     }
    ],
    "source": [
-    "def day5(s, part2=False):\n",
+    "def day5(s, *, part2=False):\n",
     "  output = Machine.make(s).run_fully([5 if part2 else 1])\n",
     "  if part2:\n",
     "    assert len(output) == 1\n",
@@ -1615,6 +1621,7 @@
    "id": "a4de08d8",
    "metadata": {},
    "source": [
+    "<a name=\"day6\"></a>\n",
     "## Day 6: Count orbit transfers"
    ]
   },
@@ -1716,7 +1723,7 @@
     }
    ],
    "source": [
-    "def day6(s, part2=False, source='YOU', destination='SAN'):\n",
+    "def day6(s, *, part2=False, source='YOU', destination='SAN'):\n",
     "\n",
     "  def get_orbit_parents(s):\n",
     "    parents = {}\n",
@@ -1765,6 +1772,7 @@
    "id": "1cda287a",
    "metadata": {},
    "source": [
+    "<a name=\"day7\"></a>\n",
     "## Day 7: Cycle of 5 machines"
    ]
   },
@@ -1853,7 +1861,7 @@
     }
    ],
    "source": [
-    "def day7_part1(s, return_all=False):\n",
+    "def day7_part1(s, *, return_all=False):\n",
     "\n",
     "  def get_thrust(s, phases):\n",
     "    check_eq(sorted(phases), list(range(5)))\n",
@@ -1903,7 +1911,7 @@
     }
    ],
    "source": [
-    "def day7_part2(s, return_all=False):\n",
+    "def day7_part2(s, *, return_all=False):\n",
     "\n",
     "  def get_thrust2(phases):\n",
     "    check_eq(sorted(phases), list(range(5, 10)))\n",
@@ -1941,6 +1949,7 @@
    "id": "c6825c6d",
    "metadata": {},
    "source": [
+    "<a name=\"day8\"></a>\n",
     "## Day 8: Compositing image layers"
    ]
   },
@@ -2055,7 +2064,7 @@
     }
    ],
    "source": [
-    "def day8(s, part2=False):\n",
+    "def day8(s, *, part2=False):\n",
     "  s = s.strip('\\n')\n",
     "  grid = hh.grid_from_string(s).astype(np.uint8).reshape(-1, 6, 25)\n",
     "\n",
@@ -2100,6 +2109,7 @@
    "id": "9a604361",
    "metadata": {},
    "source": [
+    "<a name=\"day9\"></a>\n",
     "## Day 9: Machine with relative base"
    ]
   },
@@ -2222,7 +2232,7 @@
     }
    ],
    "source": [
-    "def day9(s, part2=False):\n",
+    "def day9(s, *, part2=False):\n",
     "  input = 2 if part2 else 1\n",
     "  output, = Machine.make(s).run_fully([input])\n",
     "  return output\n",
@@ -2238,6 +2248,7 @@
    "id": "6b881e72",
    "metadata": {},
    "source": [
+    "<a name=\"day10\"></a>\n",
     "## Day 10: Vaporize occluded asteroids"
    ]
   },
@@ -2396,7 +2407,7 @@
     }
    ],
    "source": [
-    "def day10(s, part2=False, return_final=True, index_vaporized=199, visualize=False):\n",
+    "def day10(s, *, part2=False, return_final=True, index_vaporized=199, visualize=False):\n",
     "  grid = hh.grid_from_string(s, {'.': 0, '#': 1})\n",
     "  indices = list(zip(*grid.nonzero()))\n",
     "\n",
@@ -2506,6 +2517,7 @@
    "id": "766d13f9",
    "metadata": {},
    "source": [
+    "<a name=\"day11\"></a>\n",
     "## Day 11: Turtle walk painting"
    ]
   },
@@ -2597,7 +2609,7 @@
     }
    ],
    "source": [
-    "def day11(s, part2=False, visualize_nth=0):\n",
+    "def day11(s, *, part2=False, visualize_nth=0):\n",
     "\n",
     "  class Painter:\n",
     "\n",
@@ -2737,6 +2749,7 @@
    "id": "4c852750",
    "metadata": {},
    "source": [
+    "<a name=\"day12\"></a>\n",
     "## Day 12: Periodic n-body problem"
    ]
   },
@@ -2974,6 +2987,7 @@
    "id": "3191967d",
    "metadata": {},
    "source": [
+    "<a name=\"day13\"></a>\n",
     "## Day 13: Game with ball and paddle"
    ]
   },
@@ -3122,7 +3136,7 @@
     }
    ],
    "source": [
-    "def day13_part2(s, visualize=False):\n",
+    "def day13_part2(s, *, visualize=False):\n",
     "  machine = Machine.make(s)\n",
     "  machine.mem[0] = 2  # set free play\n",
     "  score = None\n",
@@ -3195,6 +3209,7 @@
    "id": "6df85a7a",
    "metadata": {},
    "source": [
+    "<a name=\"day14\"></a>\n",
     "## Day 14: Make fuel from ore"
    ]
   },
@@ -3377,7 +3392,7 @@
     }
    ],
    "source": [
-    "def day14(s, fuel=1):\n",
+    "def day14(s, *, fuel=1):\n",
     "\n",
     "  def parse_recipes(s):\n",
     "    \"\"\"Returns {output: (quantity_output, Counter(inputs)}.\"\"\"\n",
@@ -3446,10 +3461,10 @@
     }
    ],
    "source": [
-    "def day14_part2(s, debug=False):\n",
+    "def day14_part2(s, *, debug=False):\n",
     "\n",
     "  def ore_from_fuel(fuel):\n",
-    "    return day14(s, fuel)\n",
+    "    return day14(s, fuel=fuel)\n",
     "\n",
     "  ore_bound = 1_000_000_000_000\n",
     "  fuel = hh.discrete_binary_search(ore_from_fuel, 0, 10_000_000, ore_bound)\n",
@@ -3466,6 +3481,7 @@
    "id": "8b0c05b8",
    "metadata": {},
    "source": [
+    "<a name=\"day15\"></a>\n",
     "## Day 15: Shortest maze path"
    ]
   },
@@ -3790,6 +3806,7 @@
    "id": "3c5349e7",
    "metadata": {},
    "source": [
+    "<a name=\"day16\"></a>\n",
     "## Day 16: Fast faulty transform (FFT)"
    ]
   },
@@ -3896,7 +3913,7 @@
     }
    ],
    "source": [
-    "def day16_part1(s, num_phases=100, debug=False):\n",
+    "def day16_part1(s, *, num_phases=100, debug=False):\n",
     "\n",
     "  def get_fft_pattern(n, i):\n",
     "    pattern: Iterable[int] = 0, 1, 0, -1\n",
@@ -4042,7 +4059,7 @@
     }
    ],
    "source": [
-    "def day16_part2(s, repeat_input=10_000):\n",
+    "def day16_part2(s, *, repeat_input=10_000):\n",
     "\n",
     "  def fft_transform2_helper(l, num_phases=100):\n",
     "    for phase in range(num_phases):\n",
@@ -4136,6 +4153,7 @@
    "id": "076658e4",
    "metadata": {},
    "source": [
+    "<a name=\"day17\"></a>\n",
     "## Day 17: Robot movement routine"
    ]
   },
@@ -4393,7 +4411,7 @@
     }
    ],
    "source": [
-    "def day17_part2(s, visualize=False):\n",
+    "def day17_part2(s, *, visualize=False):\n",
     "\n",
     "  def get_robot_input(s):\n",
     "\n",
@@ -4491,6 +4509,7 @@
    "id": "64a47886",
    "metadata": {},
    "source": [
+    "<a name=\"day18\"></a>\n",
     "## Day 18: Maze with doors and keys"
    ]
   },
@@ -4788,7 +4807,7 @@
     }
    ],
    "source": [
-    "def day18(s, part2=False, visualize=False, fps=50, size=4, speed=1, tail=1):\n",
+    "def day18(s, *, part2=False, visualize=False, fps=50, size=4, speed=1, tail=1):\n",
     "  def is_key(ch): return ch.islower() or ch in '0123'\n",
     "  def is_door(ch): return ch.isupper()\n",
     "  def key_for_door(ch): return ch.lower()\n",
@@ -5139,6 +5158,7 @@
    "id": "1f3ee098",
    "metadata": {},
    "source": [
+    "<a name=\"day19\"></a>\n",
     "## Day 19: Tractor beam region"
    ]
   },
@@ -5239,7 +5259,7 @@
     }
    ],
    "source": [
-    "def day19_part1(s, shape=(50, 50), visualize=False):\n",
+    "def day19_part1(s, *, shape=(50, 50), visualize=False):\n",
     "\n",
     "  def in_tractor(y, x):\n",
     "    output, = Machine.make(s).run_fully([x, y])\n",
@@ -5279,7 +5299,7 @@
     }
    ],
    "source": [
-    "def day19_part2(s, size=100, visualize=False):\n",
+    "def day19_part2(s, *, size=100, visualize=False):\n",
     "\n",
     "  def in_tractor(y, x):\n",
     "    output, = Machine.make(s).run_fully([x, y])\n",
@@ -5360,6 +5380,7 @@
    "id": "ef953f3e",
    "metadata": {},
    "source": [
+    "<a name=\"day20\"></a>\n",
     "## Day 20: Maze with recursive portals"
    ]
   },
@@ -5599,7 +5620,7 @@
     }
    ],
    "source": [
-    "def day20(s, part2=False, max_level=0, visualize=False, speed=2, repeat=3):\n",
+    "def day20(s, *, part2=False, max_level=0, visualize=False, speed=2, repeat=3):\n",
     "\n",
     "  class Maze:\n",
     "    NEIGHBORS = (0, 1), (1, 0), (0, -1), (-1, 0)\n",
@@ -5924,6 +5945,7 @@
    "id": "7999246b",
    "metadata": {},
    "source": [
+    "<a name=\"day21\"></a>\n",
     "## Day 21: Program jumping robot"
    ]
   },
@@ -6213,6 +6235,7 @@
    "id": "b4585f9f",
    "metadata": {},
    "source": [
+    "<a name=\"day22\"></a>\n",
     "## Day 22: Card-deck shuffle"
    ]
   },
@@ -6521,7 +6544,7 @@
     }
    ],
    "source": [
-    "def day22(s, part2=False):\n",
+    "def day22(s, *, part2=False):\n",
     "  deck_size = 119315717514047 if part2 else 10007\n",
     "  num_shuffles = 101741582076661 if part2 else 1\n",
     "  deck = Deck(deck_size).apply_shuffle(s)**num_shuffles\n",
@@ -6538,6 +6561,7 @@
    "id": "80fc9457",
    "metadata": {},
    "source": [
+    "<a name=\"day23\"></a>\n",
     "## Day 23: Network of 50 machines"
    ]
   },
@@ -6615,7 +6639,7 @@
     }
    ],
    "source": [
-    "def day23(s, part2=False, num_machines=50):\n",
+    "def day23(s, *, part2=False, num_machines=50):\n",
     "  machines = [Machine.make(s) for _ in range(num_machines)]\n",
     "  inputs = [collections.deque([i]) for i, machine in enumerate(machines)]\n",
     "  nat_memory: tuple[int, int] | None = None\n",
@@ -6650,6 +6674,7 @@
    "id": "4da62df2",
    "metadata": {},
    "source": [
+    "<a name=\"day24\"></a>\n",
     "## Day 24: Game of life - nested rings"
    ]
   },
@@ -6797,7 +6822,7 @@
     }
    ],
    "source": [
-    "def day24_part2(s, num_steps=200, visualize=False):\n",
+    "def day24_part2(s, *, num_steps=200, visualize=False):\n",
     "  abs_level = num_steps // 2 + 1  # slow propagation\n",
     "  # Levels [-abs_level, abs_level] map to grid[1 : abs_level * 2 + 2].\n",
     "  grid = np.zeros((abs_level * 2 + 3, 5, 5), dtype=np.int64)  # zero-padded\n",
@@ -6877,6 +6902,7 @@
    "id": "03807949",
    "metadata": {},
    "source": [
+    "<a name=\"day25\"></a>\n",
     "## Day 25: Text adventure (n,s,e,w)"
    ]
   },
@@ -6974,7 +7000,7 @@
     }
    ],
    "source": [
-    "def day25(s, num_steps=2000):\n",
+    "def day25(s, *, num_steps=2000):\n",
     "  UNSAFE_ITEMS = {'photons', 'infinite loop', 'giant electromagnet',\n",
     "                  'molten lava', 'escape pod'}\n",
     "  # 'It is suddenly completely dark! You are eaten by a Grue!'\n",
@@ -7067,6 +7093,7 @@
    "id": "2602c09b",
    "metadata": {},
    "source": [
+    "<a name=\"timings\"></a>\n",
     "## Timings"
    ]
   },
