--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -3916,7 +3916,7 @@
     "def day16_part1(s, *, num_phases=100, debug=False):\n",
     "\n",
     "  def get_fft_pattern(n, i):\n",
-    "    pattern: Iterable[int] = 0, 1, 0, -1\n",
+    "    pattern: Iterable[int] = (0, 1, 0, -1)\n",
     "    pattern = itertools.cycle(pattern)\n",
     "    pattern = hh.repeat_each(pattern, i + 1)\n",
     "    pattern = list(itertools.islice(pattern, 1, n + 1))\n",
