--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -944,8 +944,8 @@
     "\n",
     "\n",
     "puzzle.verify(1, day2a)  # ~0 ms.\n",
-    "day2_part2a = functools.partial(day2a, part2=True)\n",
-    "puzzle.verify(2, day2_part2a)  # ~175 ms."
+    "day2a_part2 = functools.partial(day2a, part2=True)\n",
+    "puzzle.verify(2, day2a_part2)  # ~175 ms."
    ]
   },
   {
@@ -1128,7 +1128,7 @@
     }
    ],
    "source": [
-    "def day3a(s):  # Abandonned slow version, using large 2D images.\n",
+    "def day3a_part1(s):  # Abandonned slow version, using large 2D images.\n",
     "  shape = 20, 20  # Y, X\n",
     "  origin = np.array(shape) // 2\n",
     "\n",
@@ -1171,7 +1171,7 @@
     "  return abs(intersections).sum(axis=-1).min()\n",
     "\n",
     "\n",
-    "check_eq(day3a(s1), 6)  # [[-5  6] [-3  3]]"
+    "check_eq(day3a_part1(s1), 6)  # [[-5  6] [-3  3]]"
    ]
   },
   {
@@ -1236,11 +1236,11 @@
     "check_eq(day3b(s3), 135)\n",
     "puzzle.verify(1, day3b)  # ~230 ms.\n",
     "\n",
-    "day3_part2a = functools.partial(day3b, part2=True)\n",
-    "check_eq(day3_part2a(s1), 30)\n",
-    "check_eq(day3_part2a(s2), 610)\n",
-    "check_eq(day3_part2a(s3), 410)\n",
-    "puzzle.verify(2, day3_part2a)  # ~230 ms."
+    "day3b_part2 = functools.partial(day3b, part2=True)\n",
+    "check_eq(day3b_part2(s1), 30)\n",
+    "check_eq(day3b_part2(s2), 610)\n",
+    "check_eq(day3b_part2(s3), 410)\n",
+    "puzzle.verify(2, day3b_part2)  # ~230 ms."
    ]
   },
   {
