--- a/advent_of_code_2019.ipynb
+++ b/advent_of_code_2019.ipynb
@@ -534,7 +534,7 @@
     "    super().__init__()\n",
     "    # Preallocate extra memory because we do not grow it as in PyMachine.\n",
     "    self.mem = np.concatenate((np.array(list(map(int, s.split(',')))),\n",
-    "                               np.zeros(mem_extend, dtype=np.int64)))\n",
+    "                               np.zeros(mem_extend, np.int64)))\n",
     "\n",
     "  @staticmethod\n",
     "  @numba_njit(cache=True)\n",
@@ -606,7 +606,7 @@
     "  def run_until_need_input(self, input: list[int]) -> list[int]:\n",
     "    assert not self.terminated\n",
     "    self._pc, self._relative_base, self.terminated, output = self._run(\n",
-    "        self.mem, self._pc, self._relative_base, np.array(input, dtype=np.int64))\n",
+    "        self.mem, self._pc, self._relative_base, np.array(input, np.int64))\n",
     "    return output\n",
     "\n",
     "  def run_fully(self, input: list[int] | None = None) -> list[int]:\n",
@@ -927,9 +927,7 @@
     "    l[1] = a\n",
     "    l[2] = b\n",
     "    i = 0\n",
-    "    while True:\n",
-    "      if l[i] == 99:\n",
-    "        break\n",
+    "    while l[i] != 99:\n",
     "      if l[i] == 1:\n",
     "        l[l[i + 3]] = l[l[i + 1]] + l[l[i + 2]]\n",
     "        i += 4\n",
@@ -1155,7 +1153,7 @@
     "  def rasterize(path: str):\n",
     "    moves = path.split(',')\n",
     "    position = origin.copy()\n",
-    "    grid = np.full(shape, 0, dtype=np.uint8)\n",
+    "    grid = np.full(shape, 0, np.uint8)\n",
     "    count = 0\n",
     "    for move in moves:\n",
     "      vec = vec_from_move(move)\n",
@@ -2442,7 +2440,7 @@
     "  src_yx = best_yx\n",
     "  grid[src_yx] = 0  # ignore source base asteroid\n",
     "  vaporized = []\n",
-    "  time_vaporized = np.full_like(grid, 0, dtype=np.int32)\n",
+    "  time_vaporized = np.full_like(grid, 0, np.int32)\n",
     "  count_vaporized = 0\n",
     "  images = []\n",
     "  while True:\n",
@@ -2455,7 +2453,7 @@
     "    # +X axis and increases towards +Y axis.\n",
     "    angle = np.arctan2(dx, -dy)  # clockwise with angle 0.0 at top\n",
     "    angle = np.where(angle < 0.0, angle + math.tau, angle)  # [0.0, tau)\n",
-    "    t = np.full_like(grid, np.inf, dtype=np.float32)\n",
+    "    t = np.full_like(grid, np.inf, np.float32)\n",
     "    t[y, x] = angle\n",
     "    for _, dst_y, dst_x in sorted(zip(angle, y, x)):\n",
     "      if is_visible((dst_y, dst_x), src_yx, grid):\n",
@@ -3637,10 +3635,7 @@
     "    return True\n",
     "\n",
     "  def explore(self):\n",
-    "    while True:\n",
-    "      path = self.shortest_path(self.current_yx, until='unknown')\n",
-    "      if not path:\n",
-    "        break\n",
+    "    while path := self.shortest_path(self.current_yx, until='unknown'):\n",
     "      for yx in path[:-1]:\n",
     "        check_eq(self.advance_to(yx), True)\n",
     "      self.advance_to(path[-1])\n",
@@ -4843,13 +4838,11 @@
     "      distance, yx, needed = to_visit.popleft()\n",
     "      ch = grid[yx]\n",
     "      if is_key(ch) and ch != current_key:\n",
-    "        path = []\n",
+    "        path = [yx]\n",
     "        yx2 = yx\n",
-    "        while True:\n",
-    "          path.append(yx2)\n",
-    "          if yx2 not in parent:\n",
-    "            break\n",
+    "        while yx2 in parent:\n",
     "          yx2 = parent[yx2]\n",
+    "          path.append(yx2)\n",
     "        result[ch] = distance, frozenset(needed), path[::-1]\n",
     "        needed = needed + [ch]\n",
     "      elif is_door(ch):\n",
@@ -4900,7 +4893,7 @@
     "    owned_key_color = 255, 160, 160\n",
     "    active_color = 250, 120, 0\n",
     "    while True:\n",
-    "      image = np.array([cmap[e] for e in grid.flat], dtype=np.uint8).reshape(*grid.shape, 3)\n",
+    "      image = np.array([cmap[e] for e in grid.flat], np.uint8).reshape(*grid.shape, 3)\n",
     "      for key in keys.difference('0123'):\n",
     "        image[yx_of_key[key]] = owned_key_color\n",
     "      for key in current_keys:\n",
@@ -5729,12 +5722,10 @@
     "      while to_visit:\n",
     "        lyx = to_visit.popleft()  # Heap not needed because all edge costs are 1.\n",
     "        if lyx == dst_lyx:\n",
-    "          path = []\n",
-    "          while True:\n",
-    "            path.append(lyx)\n",
-    "            if lyx not in parent:\n",
-    "              break\n",
+    "          path = [lyx]\n",
+    "          while lyx in parent:\n",
     "            lyx = parent[lyx]\n",
+    "            path.append(lyx)\n",
     "          return path[-2::-1]  # (The path does not include src_lyx.)\n",
     "        for dy, dx in self.NEIGHBORS:\n",
     "          lyx2 = lyx[0], lyx[1] + dy, lyx[2] + dx\n",
@@ -5765,9 +5756,7 @@
     "        d, lyx = heapq.heappop(pq)\n",
     "        if lyx == dst_lyx:\n",
     "          path: list[tuple[int, int, int]] = []\n",
-    "          while True:\n",
-    "            if lyx not in parent:\n",
-    "              return path[::-1]  # (The path does not include src_lyx.)\n",
+    "          while lyx in parent:\n",
     "            lyx2 = parent[lyx]\n",
     "            if lyx[1:] in self.portal_portal_path[lyx2[1:]]:\n",
     "              subpath = self.portal_portal_path[lyx2[1:]][lyx[1:]][::-1]\n",
@@ -5776,6 +5765,7 @@
     "              check_eq(self.opposite_portal(lyx2, max_level), lyx)\n",
     "              path.append(lyx2)\n",
     "            lyx = lyx2\n",
+    "          return path[::-1]  # (The path does not include src_lyx.)\n",
     "\n",
     "        # Nodes can get added to the priority queue multiple times.  We only\n",
     "        # process a node the first time we remove it from the priority queue.\n",
@@ -5809,7 +5799,7 @@
     "      grid = self.grid.copy()\n",
     "      grid[('A' <= grid) & (grid <= 'Z')] = 'A'\n",
     "      cmap = {' ': (235,) * 3, '.': (255,) * 3, '#': (30,) * 3, 'A': (40, 40, 255)}\n",
-    "      image0 = np.array([cmap[e] for e in grid.flat], dtype=np.uint8).reshape(\n",
+    "      image0 = np.array([cmap[e] for e in grid.flat], np.uint8).reshape(\n",
     "        *grid.shape, 3)\n",
     "\n",
     "      def record_image(image):\n",
@@ -6458,6 +6448,7 @@
     "    assert 0 <= pos < self.size\n",
     "    # We solve for the card i that satisfies:\n",
     "    #   pos == (start + step * i) % size   (with gcd(step, size) == 1)\n",
+    "    # using a modular inverse.\n",
     "    inv_step = pow(self.step, -1, mod=self.size)\n",
     "    return (inv_step * (pos - self.start)) % self.size\n",
     "\n",
@@ -6833,7 +6824,7 @@
     "def day24_part2(s, *, num_steps=200, visualize=False):\n",
     "  abs_level = num_steps // 2 + 1  # slow propagation\n",
     "  # Levels [-abs_level, abs_level] map to grid[1 : abs_level * 2 + 2].\n",
-    "  grid = np.zeros((abs_level * 2 + 3, 5, 5), dtype=np.int64)  # zero-padded\n",
+    "  grid = np.zeros((abs_level * 2 + 3, 5, 5), np.int64)  # zero-padded\n",
     "  grid[abs_level + 1] = hh.grid_from_string(s, {'.': 0, '#': 1})\n",
     "  counts = np.empty_like(grid)\n",
     "\n",
